<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/screensaver"
    android:id="@+id/root_element"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@id/text_bottom"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="15dp"
      android:layout_marginLeft="15dp"
      android:layout_marginTop="15dp"
      android:layout_marginEnd="15dp"
      android:layout_marginRight="15dp"
      android:layout_marginBottom="17dp"
      android:gravity="center"
      android:orientation="vertical"
      android:weightSum="2">


      <TextView

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/marck_script"
          android:text="@string/name_salon"
          android:textAlignment="center"
          android:textColor="#6E3D7A"
          android:textSize="50dp" />

      <TextView

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:fontFamily="@font/marck_script"
          android:text="@string/app_moto"
          android:textAlignment="center"
          android:textColor="#747474"
          android:textSize="25dp" />



    <Button
        android:id="@+id/buttonIn"
        android:layout_width="177dp"
        android:layout_height="175dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/sign"
        android:textColor="#6E3D7A"
        android:textSize="25dp" />


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/buttonReg"
        android:layout_width="174dp"
        android:layout_height="175dp"
        android:layout_weight="1"

        android:layout_marginBottom="13dp"
        android:background="@drawable/button_reg"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/regist"
        android:textColor="#6E3D7A"
        android:textSize="25dp" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
            android:layout_marginTop="10dp"
          android:orientation="horizontal">

          <com.facebook.login.widget.LoginButton
              android:id="@+id/login_button"
              style="@style/FacebookLoginButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="20dp"
              android:gravity="center_vertical"
              android:paddingTop="18dp"
              android:paddingBottom="18dp"
              android:layout_marginRight="20dp"
              />

          <com.google.android.gms.common.SignInButton
              android:id="@+id/sign_google_button"

              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="45dp"


              />
      </LinearLayout>

  </LinearLayout>

  <TextView
      android:id="@+id/text_bottom"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="1dp"
      android:layout_marginBottom="10dp"
      android:fontFamily="@font/comfortaa_light"
      android:text="@string/bottom"
      android:textAlignment="center"
      android:textColor="@color/colorBottom"
      android:textSize="20dp" />


</RelativeLayout>